# kanon-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  mypy.ini  pyproject.toml  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  labels.yml  release.yml
docker/: Dockerfile  entrypoint.sh  healthcheck.sh
kanon_api/: __init__.py  app.py  settings.py  units.py  utils.py
kanon_api/core/calculations/: parser.py
kanon_api/core/calculations/tests/: test_parser.py
kanon_api/core/ephemerides/: ascendant.py  houses.py  sun.py  table_classes.py  tables.py  true_position.py  utils.py
kanon_api/core/ephemerides/table_sets/: parisian_alphonsine_tables.json
kanon_api/core/ephemerides/tests/: test_ephemerides.py
kanon_api/ephemerides/: sun.py  utils.py
kanon_api/ephemerides/tests/: test_ephemerides.py
kanon_api/routes/: calculations.py  calendars.py  ephemerides.py  models.py  radices.py
kanon_api/tests/: test_app.py  test_dishas_cache.py  test_utils.py
