[tool.poetry]
name = "kanon-api"
version = "0.0.1"
description = "Kanon features exposed through an API"
authors = ["Léni Gauffier <leni.gauffier@obspm.fr>"]
readme = "README.md"
repository = "https://github.com/legau/kanon-api"
documentation = "https://kanon-api.readthedocs.io"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/legau/kanon-api/issues"
"Changelog" = "https://kanon-api.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = "^3.9"
kanon = "0.6.0"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
black = "^22.1"
flake8 = "^4.0.1"
isort = "^5.8.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
mypy = "^0.931"
pre-commit = "^2.17.0"
types-requests = "^2.25.0"
uvicorn = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_first_party = ["app", "tests"]
