[tool.poetry]
name = "kanon-api"
version = "0.6.0"
description = "Kanon features exposed through an API"
authors = ["Léni Gauffier <leni.gauffier@obspm.fr>"]
readme = "README.md"
repository = "https://github.com/legau/kanon-api"
documentation = "https://kanon-api.readthedocs.io"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/legau/kanon-api/issues"
"Changelog" = "https://kanon-api.readthedocs.io/changelog.html"

[tool.poetry.dependencies]
python = "^3.9"
kanon = "^0.6.0"
fastapi = "<1.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "^*"
isort = "*"
pytest = "*"
pytest-cov = "*"
mypy = "*"
pre-commit = "*"
types-requests = "*"
uvicorn = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
known_first_party = ["app", "tests"]
